cmake_minimum_required(VERSION 3.6)
project(TravorOS C ASM_NASM)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_C_FLAGS "-m32 -ffreestanding -Wno-packed-bitfield-compat")
set(CMAKE_ASM_NASM_FLAGS "-Iinit")
set(CMAKE_EXE_LINKER_FLAGS "-melf_i386 -T link.ld")
set(PROJECT_BINARY_DIR ${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/include)
add_subdirectory(kernel)
add_subdirectory(mm)
add_subdirectory(drivers)
file(GLOB INIT_SOURCES init/grub_entry.asm init/*.c)
add_executable(image ${INIT_SOURCES})
target_link_libraries(image kern mm ${DRIVERS})
